--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -1,21 +1,22 @@
-name: Release
+name: Release Processing
 on:
   release:
     types: [published]
-
 jobs:
-  release:
+  build-and-upload:
+    name: Minify JS & Upload Assets
     runs-on: ubuntu-latest
     permissions:
       contents: write
     steps:
-      - uses: actions/checkout@v3
-      - name: Package
+      - uses: actions/checkout@v4
+      - uses: actions/setup-node@v4
+        with:
+          node-version: '20'
+      - name: Process JS Files
         run: |
-          mkdir -p dist
-          cp *.js dist/
-
-      - name: Upload to release
+          npx esbuild *.js --minify --outdir=dist
+      - name: Upload to Release
         uses: svenstaro/upload-release-action@v2
         with:
           repo_token: ${{ secrets.GITHUB_TOKEN }}
@@ -23,4 +24,3 @@ jobs:
           file_glob: true
           tag: ${{ github.ref }}
           overwrite: true
-          
