--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -21,6 +21,7 @@ jobs:
         run: |
           for file in temp/*.js; do
             sed -i '/^\s*debugLog(.*);/d' "$file"
+            sed -i '/^\s*\(if\s*(.*)\s*\)\?\s*debugLog(.*);/d' "$file"
             sed -i '/function debugLog(.*)/,/^}/d' "$file"
           done
       - name: Process JS Files
